# stonks

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  ark_tickers.txt  clean_tickers.py  config.py  gen_tickers.py  main.py  pyproject.toml  screener.py  tickers.txt
.github/workflows/: docker.yml
